
Version 0.3.1dev (TBA)
======================

Enhancements:

  * Keybindings to switch tabs and notebooks.
  * Undo/redo.
  * Home/end keys.
  * Modified tabs have little stars before their names.
  * Directory tree refreshes on window focus.

Version 0.3.0dev (25 Dec 2009)
==============================

Rewritten in JRuby/SWT.

Enhancements:
  
  * _Much_ simpler installation: packaged as a gem.
  * Faster highlighter
  * Fewer bugs
  * Clearer architecture
  * Multiple window/project support.


Version 0.2 (28 May 2009)
=========================

New features, enhancements:

  * Fuzzy file finder notices new files and runs MUCH faster.
  * Undo close tab (Ctrl+Shift+T)
  * Type " or ( or [ etc to wrap selection in pair.
  * Warm startup 3 times faster.
  * Added Incremental Search menu item.
  * Now prompts to save if file is modified when closed.
  * HtmlTab now uses Webkit instead of Mozilla
  * Convert case commands
  * Keybindings match up with Gnome better (Ctrl+C/V)
  * Added Scala and Haskell bundles.
  * Added theme from Railscasts

Bug fixes:

  * Fixed Jaunty DBus bug (no more --multiple-instance!) (#60)
  * Fixed paste-over bug (#74)
  * Fixed bug that allows multiple project tabs (#69)
  * Fixed so only one copy of a file can be open (#62)
  * Fixed file finder not finding new files
  * Fixed silently failing to save when bad permissions (#10)

New contributors:

  * Mark Wilkinson
  * Pat Ciambrone
  * poweradapter
  * Henrik Hodne

Version 0.1 (6 April 2009)
==========================
http://redcareditor.com/releases/redcar-0.1.tar.gz

First release. 

Features:

  * Textmate syntax highlighting
  * Textmate snippets
  * Text, Source, Ruby Textmate commands + some others
  * Project pane

Contributors:

  * Daniel Lucraft
  * Cairo Noleto