@@ -9,6 +9,7 @@ Enhancements:
   * Home/end keys.
   * Modified tabs have little stars before their names.
   * Directory tree refreshes on window focus.
+  * Fuzzy file finder.
 
 Version 0.3.0dev (25 Dec 2009)
 ==============================
